--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "vue": "^3.3.2",
     "vue-router": "^4.2.1",
     "vuetify": "^3.3.1"
